k8s/appointment-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
  namespace: healthcare
spec:
  selector:
    app: appointment-service
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8083
