k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: healthcare
spec:
  selector:
    app: client
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
